src/components/Tracks/index.css
.trackCardWrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  color: #fff;
  margin: 40px auto;
  row-gap: 40px;
  place-items: center;
}

.trackCard {
  border: 2px solid rgba(255, 255, 255, 0.5);
  padding: 16px 24px;
  border-radius: 12px;
  transition-duration: 1s;
  box-sizing: border-box;
}

.trackCard:hover {
  border: 2px solid #1cb4a0;
  color: #1cb4a0;
  transition-duration: 500ms;

  .lyricsButton {
    background-color: #1cb4a0;
    transition-duration: 1500ms;
  }
}

.trackArtist,
.trackAlbum {
  display: flex;
  align-items: center;
  gap: 4px;
  margin: 8px 0;
  font-size: 16px;
  font-weight: 500;
}

.trackName {
  font-size: 25px;
  font-weight: bold;
}

.lyricsButtonWrapper {
  text-align: right;
  margin-top: 32px;
}

.header {
  color: #fff;
  text-align: center;
  font-size: 2.5rem;
}

.trackName.skeleton,
.trackArtist.skeleton,
.trackAlbum.skeleton {
  width: 70%;
}

.lyricsButton {
  height: 32px;
  width: 100%;
  cursor: pointer;
  border: none;
  color: white;
  letter-spacing: 1px;
  outline: none;
  background-color: rgba(255, 255, 255, 0.3);
  transition-duration: 1500ms;
}

.lyricsTrackName.skeleton {
  height: 30px;
  margin: auto;
  margin-bottom: 10px;
  width: 70%;
}

@media (max-width: 576px) {
  .trackCardWrapper {
    grid-template-columns: 1fr;
    place-content: center;
    margin: 20px auto;
    row-gap: 20px;
    width: 100%;
  }
  .trackCard {
    width: 300px;
  }
  .header {
    font-size: 1.2rem;
  }

  .trackName {
    font-size: 18px;
  }

  .trackArtist,
  .trackAlbum {
    font-size: 14px;
  }

  .lyricsButtonWrapper {
    margin-top: 16px;
  }
}

@media (min-width: 576px) and (max-width: 768px) {
  .trackCardWrapper {
    grid-template-columns: 1fr;
    margin: 20px auto;
    row-gap: 20px;
    width: 100%;
  }
  .trackCard {
    width: 440px;
  }
  .header {
    font-size: 1.6rem;
  }
  .trackName {
    font-size: 20px;
  }

  .trackArtist,
  .trackAlbum {
    font-size: 16px;
  }

  .lyricsButtonWrapper {
    margin-top: 24px;
  }
}

@media (min-width: 769px) {
  .trackCard {
    width: 350px;
  }
}

@media (min-width: 1200px) {
  .trackCardWrapper {
    width: 80%;
  }
  .trackCard {
    width: 440px;
  }
}

